--- a/src/components/hr.styl
+++ b/src/components/hr.styl
@@ -8,3 +8,6 @@
   &.-transparent
     border 0
     margin 1em 0
+
+  &.-short
+    width 10px
