--- a/src/components/link-text.styl
+++ b/src/components/link-text.styl
@@ -30,6 +30,12 @@ Style guide: components.link-text
     color $cyan
     text-decoration none
 
+  &.-green
+    color $cyan
+
+  &.-red
+    color $red
+
   &.-centered
     display block
     text-align center
