--- a/src/components/select-list.styl
+++ b/src/components/select-list.styl
@@ -10,6 +10,9 @@ $select-list-max-height = 240px
   height $input-height
   position relative
 
+  ~ .input-text
+    margin-top 3em
+
   &.-focused > .input-text:after
     content '\f3d2'
 
